--- a/BeautyLife/StewardPageView.xib
+++ b/BeautyLife/StewardPageView.xib
@@ -114,6 +114,9 @@
                                     <state key="normal" image="express.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <connections>
+                                        <action selector="expressAction:" destination="-1" eventType="touchUpInside" id="e6t-T7-ZYo"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="快递收发" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ibJ-Jn-09y">
                                     <rect key="frame" x="120" y="193" width="59" height="21"/>
