--- a/BeautyLife/ExpressView.xib
+++ b/BeautyLife/ExpressView.xib
@@ -19,11 +19,11 @@
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="RRx-Pd-CVW">
                     <rect key="frame" x="0.0" y="40" width="320" height="412"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <view contentMode="scaleToFill" id="rqX-Wx-WuD">
                             <rect key="frame" x="10" y="1" width="300" height="411"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="maillogo.png" id="QKh-Fr-avd">
                                     <rect key="frame" x="12" y="11" width="20" height="20"/>
