--- a/BeautyLife/BusinessView.xib
+++ b/BeautyLife/BusinessView.xib
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConvView">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BusinessView">
             <connections>
                 <outlet property="view" destination="hCI-n5-6oN" id="eIp-2k-8eH"/>
             </connections>
@@ -18,7 +18,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="JZN-BZ-GHO">
                     <rect key="frame" x="16" y="20" width="49" height="58"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" image="conv_fix.png">
+                    <state key="normal" image="business_xihan.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -32,7 +32,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Lif-ea-0st">
                     <rect key="frame" x="177" y="20" width="49" height="58"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" image="conv_water.png">
+                    <state key="normal" image="conv_fix.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -72,16 +72,16 @@
                     </state>
                 </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="frl-xI-agz">
-                    <rect key="frame" x="0.0" y="152" width="319" height="416"/>
+                    <rect key="frame" x="0.0" y="167" width="319" height="401"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="sectionIndexBackgroundColor" red="0.74117647058823533" green="0.75294117647058822" blue="0.81176470588235294" alpha="1" colorSpace="calibratedRGB"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
         </view>
     </objects>
     <resources>
+        <image name="business_xihan.png" width="98" height="117"/>
         <image name="conv_ finish.png" width="49" height="58"/>
         <image name="conv_ homemaking.png" width="49" height="58"/>
         <image name="conv_ tour.png" width="49" height="58"/>
@@ -89,6 +89,5 @@
         <image name="conv_dry_clean.png" width="49" height="58"/>
         <image name="conv_fix.png" width="49" height="58"/>
         <image name="conv_more.png" width="49" height="58"/>
-        <image name="conv_water.png" width="49" height="58"/>
     </resources>
 </document>
