--- a/BeautyLife/LifePageView.xib
+++ b/BeautyLife/LifePageView.xib
@@ -53,6 +53,9 @@
                                     <state key="normal" image="saleprice.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <connections>
+                                        <action selector="clickSubtle:" destination="-1" eventType="touchUpInside" id="kUE-xq-Z9F"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="精选特价" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iiv-fW-Ita">
                                     <rect key="frame" x="21" y="106" width="59" height="21"/>
@@ -66,6 +69,9 @@
                                     <state key="normal" image="business.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <connections>
+                                        <action selector="clickBusiness:" destination="-1" eventType="touchUpInside" id="HC3-EK-sAF"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="联盟商家" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WKU-Hi-T83">
                                     <rect key="frame" x="121" y="106" width="59" height="21"/>
@@ -95,6 +101,9 @@
                                     <state key="normal" image="recharge.png">
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
+                                    <connections>
+                                        <action selector="clickRecharge:" destination="-1" eventType="touchUpInside" id="JRu-iv-MEb"/>
+                                    </connections>
                                 </button>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="在线充值" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cA7-R7-av9">
                                     <rect key="frame" x="20" y="193" width="59" height="21"/>
