完成联盟商家列表,联盟商家,商品详情,便民服务详情页面

--- a/BeautyLife/BusinessView.xib
+++ b/BeautyLife/BusinessView.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BusinessView">
             <connections>
+                <outlet property="tableView" destination="frl-xI-agz" id="c9A-M6-sCK"/>
                 <outlet property="view" destination="hCI-n5-6oN" id="eIp-2k-8eH"/>
             </connections>
         </placeholder>
