--- a/BeautyLife/LifePageView.xib
+++ b/BeautyLife/LifePageView.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LifePageView">
             <connections>
+                <outlet property="advIv" destination="A8x-zd-Vyx" id="xF1-8w-1Y2"/>
                 <outlet property="menuBg" destination="w1U-Kh-BJ3" id="oDo-3t-WgX"/>
                 <outlet property="scrollView" destination="HMR-nI-bgi" id="lL4-Mw-hxF"/>
                 <outlet property="telBg" destination="yX3-We-aq8" id="cdz-FK-kdU"/>
@@ -22,9 +23,9 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="494"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lifetop.png" id="A8x-zd-Vyx">
+                        <imageView multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lifetop.png" id="A8x-zd-Vyx">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </imageView>
                         <view contentMode="scaleToFill" id="w1U-Kh-BJ3">
                             <rect key="frame" x="10" y="156" width="300" height="247"/>
