--- a/BeautyLife/MainPageView.xib
+++ b/BeautyLife/MainPageView.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainPageView">
             <connections>
+                <outlet property="advIv" destination="jQd-o6-Ve4" id="7bn-X4-0ep"/>
                 <outlet property="menuBg" destination="Oq1-43-PDK" id="aq8-oc-YbF"/>
                 <outlet property="scrollView" destination="sZR-dM-a0v" id="1rq-de-j2o"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -21,7 +22,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="566"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_topimage.png" id="jQd-o6-Ve4">
+                        <imageView multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_topimage.png" id="jQd-o6-Ve4">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         </imageView>
@@ -46,6 +47,9 @@
                                 <color key="titleColor" red="0.098039215690000001" green="0.41176470590000003" blue="0.55294117649999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="advDetailAction:" destination="-1" eventType="touchUpInside" id="Atn-kH-UGp"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ui8-bb-8jR">
                             <rect key="frame" x="232" y="206" width="58" height="26"/>
